--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -191,7 +191,7 @@
                     android:text="@string/statistic" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/totalTop"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="2dp"
