--- a/app/src/main/res/layout/activity_mulriplayer_bot.xml
+++ b/app/src/main/res/layout/activity_mulriplayer_bot.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rodionov.mishka.flagmemorine.activity.MulriplayerBotActivity">
+    tools:context="com.rodionov.mishka.flagmemorine.activity.MultiplayerBotActivity">
 
 </android.support.constraint.ConstraintLayout>
